apps/scraperr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraperr
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: scraperr.sloan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scraperr
                port:
                  number: 80
